2008-09-03  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c:
	* drive-list.c:
	* drive-button.h:
	* drive-list.h:
	* drivemount.c: Port to GIO. Work done by Pierre Ossman. Bug
	#543711.

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* GNOME_DriveMountApplet.server.in.in: Patch from Alex Jones to
	stop the drivemount applet failing to load on the second
	log-in. (Bug #471889)

2007-08-22  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c (drive_button_update): Moved declaration to be
	C89 compatible. Pointed out by Jens Granseuer (bug #461928).

2007-07-17  Jaap Haitsma <jaap@haitsma.org>

	* drive-button.c: (drive_button_init), (drive_button_new),
	(drive_button_new_from_volume), (drive_button_destroy),
	(drive_button_update):
	* drive-button.h:
	* drive-list.c: (drive_list_init), (drive_list_destroy),
	(add_drive), (add_volume):
	* drive-list.h:
	* drivemount.c: (display_about_dialog), (applet_factory):
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-02-25  Davyd Madeley  <davyd@madeley.id.au>

	* drive-button.c: Handle icon theme changes. Fixes #339006.
	  Based on a patch from Jesse Stockall  <jesse@cleverone.org>.

2006-11-16  Kjartan Maraas  <kmaraas@gnome.org>

	* drivemount.c: (applet_factory): Add an accessible name
	to the applet. Rodney Dawes, closes bug #373034.

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* help/C/drivemount.xml: Fix build.

2006-08-07  Davyd Madeley  <davyd@madeley.id.au>

	* GNOME_DriveMountApplet.server.in:
	- fix component name in server file. Closes #348845.

2006-02-03  Ryan Lortie  <desrt@desrt.ca>

	* drivemount.c (change_background, applet_factory): Revert a bit
	  of the change to the new background API to resolve a problem
	  found by Michael Hofmann <mh21@piware.de> in bug #329649.