@@ -1,3 +1,9 @@
+2008-09-13  Callum McKenzie  <callum@spooky-possum.org>
+
+	* drive-button.c (eject_finish): Avoid a crash on eject by
+	supplying a callback. Bug 551669. This seems to be a work-around
+	for a glib error.
+
 2008-09-03  Callum McKenzie  <callum@spooky-possum.org>
 
 	* drive-button.c:
